--- a/projects/ng-quill-tex/package.json
+++ b/projects/ng-quill-tex/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "ngx-quill": "^5.1.0",
     "quill": "^1.3.6",
-    "quill-blot-formatter": "^1.0.5",
+    "quill-blot-formatter": "file:quill-blot-formatter-1.0.4.tgz",
     "quill-image-upload": "^0.1.3"
   }
 }
